Fixed the gap with the info panel and top screen

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -73,5 +73,5 @@ html, body {
   position: relative;
   transition: opacity 0.5s;
   margin: 0;
-  height: 105%;
+  height: 100%;
 }
